--- a/package.json
+++ b/package.json
@@ -14,16 +14,20 @@
     "@react-navigation/native-stack": "^6.9.12",
     "expo": "~48.0.18",
     "expo-font": "~11.1.1",
+    "expo-image-picker": "~14.1.1",
     "expo-splash-screen": "~0.18.2",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
+    "react-datepicker": "^4.16.0",
     "react-native": "0.71.8",
+    "react-native-date-picker": "^4.2.13",
     "react-native-gesture-handler": "~2.9.0",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "jetifier": "^2.0.0"
   },
   "private": true
 }
