--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
-    "@react-navigation/native": "^6.1.7",
-    "@react-navigation/stack": "^6.3.17",
     "@react-navigation/bottom-tabs": "^6.5.7",
+    "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.12",
+    "@react-navigation/stack": "^6.3.17",
     "expo": "~48.0.18",
     "expo-font": "~11.1.1",
     "expo-image-picker": "~14.1.1",
@@ -22,9 +22,9 @@
     "react": "18.2.0",
     "react-datepicker": "^4.16.0",
     "react-native": "0.71.8",
-    "react-native-safe-area-context": "^4.7.1",
     "react-native-date-picker": "^4.2.13",
     "react-native-gesture-handler": "~2.9.0",
+    "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0"
   },
   "devDependencies": {
