--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "expo-splash-screen": "~0.18.2",
     "expo-status-bar": "~1.4.4",
     "firebase": "^10.1.0",
+    "moment": "^2.29.4",
     "react": "18.2.0",
     "react-datepicker": "^4.16.0",
     "react-native": "0.71.8",
